--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ex1-service
+  name: exercise1-service
 spec:
   selector:
-    app: ex1
+    app: exercise1
   ports:
   - protocol: "TCP"
     port: 6000
@@ -14,17 +14,17 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: ex1
+  name: exercise1
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: ex1
+        app: exercise1
     spec:
       containers:
-      - name: ex1
-        image: ex1:latest
+      - name: exercise1
+        image: exercise1:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
