--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,32 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ex1-service
+  name: exercise1-service
 spec:
   selector:
-    app: ex1
+    app: exercise1
   ports:
   - protocol: "TCP"
     port: 6000
-    targetPort: 5000
+    targetPort: 8080
   type: LoadBalancer
 
-
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ex1
+  name: exercise1
 spec:
+  selector:
+    matchLabels:
+      app: exercise1
   replicas: 4
   template:
     metadata:
       labels:
-        app: ex1
+        app: exercise1
     spec:
       containers:
-      - name: ex1
-        image: ex1:latest
+      - name: exercise1
+        image: exercise1:latest
         imagePullPolicy: Never
         ports:
-        - containerPort: 5000
+        - containerPort: 8080
