--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -29,6 +29,6 @@ spec:
       containers:
       - name: exercise1
         image: exercise1:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
